--- a/Source/TreasureGuide.Web/src/views/notfound.html
+++ b/Source/TreasureGuide.Web/src/views/notfound.html
@@ -1,4 +1,6 @@
 ﻿<template>
     <h1>${title}</h1>
-    <p>${message}</p>
+    <div class="flow-text">
+        <p>${message}</p>
+    </div>
 </template>
