--- a/Source/TreasureGuide.Web/Views/Home/Index.cshtml
+++ b/Source/TreasureGuide.Web/Views/Home/Index.cshtml
@@ -1,16 +1,4 @@
-﻿<!DOCTYPE html>
-<html>
-<head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <title>NakamaDB</title>
-</head>
-<body>
-    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
-    <div class="hiddendiv"></div>
-    <div aurelia-app="main">
-        <h1>Loading...</h1>
-        <script src="~/scripts/vendor-bundle.js" data-main="aurelia-bootstrapper"></script>
-    </div>
-</body>
-</html>
+﻿<div aurelia-app="main">
+    <h1>Loading...</h1>
+    <script src="~/scripts/vendor-bundle.js" data-main="aurelia-bootstrapper"></script>
+</div>
