Removing unused scripts.

--- a/Source/TreasureGuide.Web/Views/Account/Register.cshtml
+++ b/Source/TreasureGuide.Web/Views/Account/Register.cshtml
@@ -10,28 +10,28 @@
     <hr />
     <div asp-validation-summary="All" class="text-danger"></div>
     <div class="form-group">
-        <label asp-for="Email" class="col-md-2 control-label"></label>
-        <div class="col-md-10">
+        <label asp-for="Email" class="col m2 control-label"></label>
+        <div class="col m10">
             <input asp-for="Email" class="form-control" />
             <span asp-validation-for="Email" class="text-danger"></span>
         </div>
     </div>
     <div class="form-group">
-        <label asp-for="Password" class="col-md-2 control-label"></label>
-        <div class="col-md-10">
+        <label asp-for="Password" class="col m2 control-label"></label>
+        <div class="col m10">
             <input asp-for="Password" class="form-control" />
             <span asp-validation-for="Password" class="text-danger"></span>
         </div>
     </div>
     <div class="form-group">
-        <label asp-for="ConfirmPassword" class="col-md-2 control-label"></label>
-        <div class="col-md-10">
+        <label asp-for="ConfirmPassword" class="col m2 control-label"></label>
+        <div class="col m10">
             <input asp-for="ConfirmPassword" class="form-control" />
             <span asp-validation-for="ConfirmPassword" class="text-danger"></span>
         </div>
     </div>
     <div class="form-group">
-        <div class="col-md-offset-2 col-md-10">
+        <div class="col-md-offset-2 col m10">
             <button type="submit" class="btn btn-default">Register</button>
         </div>
     </div>
