Bearer with JWT now functional.

--- a/Source/TreasureGuide.Web/Views/Shared/_Layout.cshtml
+++ b/Source/TreasureGuide.Web/Views/Shared/_Layout.cshtml
@@ -6,6 +6,8 @@
     <title>NakamaDB</title>
 </head>
 <body>
+    @{ Html.RenderPartial("_TokenPartial"); }
+
     <div class="hiddendiv"></div>
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
     @RenderBody()
