--- a/Source/TreasureGuide.Web/Views/Shared/_TokenPartial.cshtml
+++ b/Source/TreasureGuide.Web/Views/Shared/_TokenPartial.cshtml
@@ -1,8 +1,11 @@
 @inject TreasureGuide.Web.Services.ITokenService TokenService
 <script id="auth_token_setter" type="text/javascript">
-        var token = @Html.Raw(await TokenService.Get(User));
-        localStorage['access_token'] = token['access_token'];
-        localStorage['access_token_exp'] = token['expires_in'];
-        console.log('access_token: ' + localStorage['access_token']);
-        console.log('access_token_exp: ' + localStorage['access_token_exp']);
+    var token = @Html.Raw(await TokenService.Get(User));
+    localStorage['access_token'] = token['access_token'];
+    localStorage['access_token_exp'] = token['expires_in'];
+
+    // SUICIDE
+    var currentScript;
+    currentScript = document.currentScript || document.scripts[document.scripts.length - 1];
+    currentScript.parentNode.removeChild(currentScript);
 </script>
