Scooting auth key stuff around.

--- a/Source/TreasureGuide.Web/Views/Shared/_Layout.cshtml
+++ b/Source/TreasureGuide.Web/Views/Shared/_Layout.cshtml
@@ -6,7 +6,7 @@
     <title>NakamaDB</title>
 </head>
 <body>
-    @{ Html.RenderPartial("_TokenPartial"); }
+    @{ Html.RenderPartial("_AuthExportPartial"); }
 
     <div class="hiddendiv"></div>
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
