Tons of look and feel goodness.

--- a/Source/TreasureGuide.Web/Views/Account/ExternalLoginConfirmation.cshtml
+++ b/Source/TreasureGuide.Web/Views/Account/ExternalLoginConfirmation.cshtml
@@ -3,38 +3,44 @@
     ViewData["Title"] = "Register";
 }
 
-<h2>@ViewData["Title"].</h2>
-<h3>Associate your @ViewData["LoginProvider"] account.</h3>
+<h2>@ViewData["Title"]</h2>
 
 <form asp-controller="Account" asp-action="ExternalLoginConfirmation" asp-route-returnurl="@ViewData["ReturnUrl"]" method="post" class="form-horizontal">
-    <h4>Association Form</h4>
-    <hr />
-    <div asp-validation-summary="All" class="text-danger"></div>
 
-    <p class="text-info">
-        You've successfully authenticated with <strong>@ViewData["LoginProvider"]</strong>.
-        Please enter an email address for this site below and click the Register button to finish
-        logging in.
-    </p>
-    <div class="form-group">
-        <label asp-for="UserName" class="col-md-2 control-label"></label>
-        <div class="col-md-10">
-            <input asp-for="UserName" class="form-control" />
-            <span asp-validation-for="UserName" class="text-danger"></span>
+    <div class="row">
+        <p class="text-info">
+            You've successfully authenticated with <strong>@ViewData["LoginProvider"]</strong>.
+            Please enter an email address for this site below and click the Register button to finish
+            logging in.
+        </p>
+    </div>
+    <div class="row">
+        <div class="input-field">
+            <i class="material-icons prefix">account_circle</i>
+            <input asp-for="UserName" type="text" class="validate" />
+            <label asp-for="UserName" class="col m2"></label>
+            <span asp-validation-for="UserName" class="red-text"></span>
         </div>
     </div>
-    <div class="form-group">
-        <label asp-for="Email" class="col-md-2 control-label"></label>
-        <div class="col-md-10">
-            <input asp-for="Email" class="form-control" />
-            <span asp-validation-for="Email" class="text-danger"></span>
+    <div class="row">
+        <div class="input-field">
+            <i class="material-icons prefix">email</i>
+            <input asp-for="Email" type="email" class="validate" />
+            <label asp-for="Email" class="col m2"></label>
+            <span asp-validation-for="Email" class="red-text"></span>
         </div>
     </div>
-    <div class="form-group">
-        <div class="col-md-offset-2 col-md-10">
-            <button type="submit" class="btn btn-default">Register</button>
-        </div>
+    <div class="row right">
+        <button class="waves-effect waves-light btn btn-large orange darken-3" type="submit">
+            Register
+            <i class="material-icons right large">send</i>
+        </button>
     </div>
+    <script type="text/javascript">
+        $(document).ready(function () {
+            Materialize.updateTextFields();
+        });
+    </script>
 </form>
 
 @section Scripts {
