--- a/Source/TreasureGuide.Web/Views/Account/AccessDenied.cshtml
+++ b/Source/TreasureGuide.Web/Views/Account/AccessDenied.cshtml
@@ -3,6 +3,6 @@
 }
 
 <header>
-    <h1 class="text-danger">Access Denied.</h1>
-    <p class="text-danger">You do not have access to this resource.</p>
+    <h1 class="red-text">Access Denied.</h1>
+    <p>You do not have access to this resource.</p>
 </header>
