--- a/Source/TreasureGuide.Web/Views/Account/ExternalLoginFailure.cshtml
+++ b/Source/TreasureGuide.Web/Views/Account/ExternalLoginFailure.cshtml
@@ -1,8 +1,8 @@
 ﻿@{
-    ViewData["Title"] = "Login Failure";
+    ViewData["Title"] = "Login Failed";
 }
 
 <header>
-    <h2>@ViewData["Title"].</h2>
-    <p class="text-danger">Unsuccessful login with service.</p>
+    <h2>@ViewData["Title"]</h2>
+    <p class="red-text">Unsuccessful login with service. Please try again!</p>
 </header>
