--- a/Source/TreasureGuide.Web/Views/Account/Lockout.cshtml
+++ b/Source/TreasureGuide.Web/Views/Account/Lockout.cshtml
@@ -3,6 +3,6 @@
 }
 
 <header>
-    <h1 class="text-danger">Locked out.</h1>
-    <p class="text-danger">This account has been locked out, please try again later.</p>
+    <h1 class="red-text">Locked out.</h1>
+    <p>This account has been locked out, please try again later.</p>
 </header>
