--- a/Source/TreasureGuide.Web/Views/Account/Login.cshtml
+++ b/Source/TreasureGuide.Web/Views/Account/Login.cshtml
@@ -1,44 +1,25 @@
-﻿@using System.Collections.Generic
-@using Microsoft.AspNetCore.Http
-@using Microsoft.AspNetCore.Http.Authentication
-@model LoginViewModel
+﻿@model LoginViewModel
 @inject SignInManager<ApplicationUser> SignInManager
 
 @{
-    ViewData["Title"] = "Log in";
+    ViewData["Title"] = "Log In";
 }
 
-<h2>@ViewData["Title"].</h2>
+<h2>@ViewData["Title"]</h2>
 <div class="row">
-    <section>
-        <h4>Use another service to log in.</h4>
-        <hr />
-        @{
-            var loginProviders = SignInManager.GetExternalAuthenticationSchemes().ToList();
-            if (loginProviders.Count == 0)
-            {
-                <div>
-                    <p>
-                        There are no external authentication services configured. See <a href="https://go.microsoft.com/fwlink/?LinkID=532715">this article</a>
-                        for details on setting up this ASP.NET application to support logging in via external services.
-                    </p>
-                </div>
-            }
-            else
-            {
-                <form asp-controller="Account" asp-action="ExternalLogin" asp-route-returnurl="@ViewData["ReturnUrl"]" method="post" class="form-horizontal">
-                    <div>
-                        <p>
-                            @foreach (var provider in loginProviders)
-                            {
-                                <button type="submit" class="btn btn-default" name="provider" value="@provider.AuthenticationScheme" title="Log in using your @provider.DisplayName account">@provider.AuthenticationScheme</button>
-                            }
-                        </p>
-                    </div>
-                </form>
-            }
-        }
-    </section>
+    <h4>Select a service to log in with.</h4>
+    <hr />
+    @{
+        var loginProviders = SignInManager.GetExternalAuthenticationSchemes().ToList();
+        <form asp-controller="Account" asp-action="ExternalLogin" asp-route-returnurl="@ViewData["ReturnUrl"]" method="post">
+            <div class="center">
+                @foreach (var provider in loginProviders)
+                {
+                    <button type="submit" class="waves-effect waves-light btn btn-large orange darken-3" name="provider" value="@provider.AuthenticationScheme" title="Log in using your @provider.DisplayName account">@provider.AuthenticationScheme</button>
+                }
+            </div>
+        </form>
+    }
 </div>
 
 @section Scripts {
