--- a/Source/TreasureGuide.Web/Views/Home/Index.cshtml
+++ b/Source/TreasureGuide.Web/Views/Home/Index.cshtml
@@ -1,4 +1,27 @@
-﻿<div aurelia-app="main">
-    <h1>Loading...</h1>
-    <script src="~/scripts/vendor-bundle.js" data-main="aurelia-bootstrapper"></script>
-</div>
+﻿<!DOCTYPE html>
+<html>
+<head>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+    <title>NakamaDB</title>
+</head>
+<body>
+    @{ Html.RenderPartial("_AuthExportPartial"); }
+    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+    <div class="hiddendiv"></div>
+
+    <div class="aurelia-wrapper" aurelia-app="main">
+        <div class="preloader">
+            <h1>Loading...</h1>
+            <style>
+                .preloader {
+                    text-align: center;
+                    font-family: sans-serif;
+                    margin-top: 40%;
+                }
+            </style>
+        </div>
+        <script src="~/scripts/vendor-bundle.js" data-main="aurelia-bootstrapper"></script>
+    </div>
+</body>
+</html>
