Adding auth req attribute.

--- a/Source/TreasureGuide.Web/src/css/site.scss
+++ b/Source/TreasureGuide.Web/src/css/site.scss
@@ -187,3 +187,9 @@ ux-dialog-container {
         width: 100%;
     }
 }
+
+.collection {
+    .unit-button {
+        pointer-events: none;
+    }
+}
