Killing the login viewmodel.

--- a/Source/TreasureGuide.Web/Views/Account/Login.cshtml
+++ b/Source/TreasureGuide.Web/Views/Account/Login.cshtml
@@ -1,5 +1,4 @@
-﻿@model LoginViewModel
-@inject SignInManager<ApplicationUser> SignInManager
+﻿@inject SignInManager<ApplicationUser> SignInManager
 
 @{
     ViewData["Title"] = "Log In";
