Fixing main page.

--- a/Source/TreasureGuide.Web/Views/Home/Index.cshtml
+++ b/Source/TreasureGuide.Web/Views/Home/Index.cshtml
@@ -7,7 +7,7 @@
 </head>
 <body>
     @{ Html.RenderPartial("_AuthExportPartial"); }
-    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+    <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet" integrity="sha384-wvfXpqpZZVQGK6TAh5PVlGOfQNHSoD2xbE+QkPxCAFlNEevoEH3Sl0sibVcOQVnN" crossorigin="anonymous">
     <div class="hiddendiv"></div>
 
     <div class="aurelia-wrapper" aurelia-app="main">
