--- a/Source/TreasureGuide.Web/src/views/teams/edit.html
+++ b/Source/TreasureGuide.Web/src/views/teams/edit.html
@@ -50,8 +50,8 @@
                           placeholder="Credits, videos, and other supplemental materials."
                           value.bind="credits & validate"></textarea>
             </div>
-            <div class="row right">
-                <input type="submit" class="_primary" click.delegate="submit()" />
+            <div class="row">
+                <input type="submit" class="_primary _floatRight" click.delegate="submit()" />
             </div>
         </fieldset>
     </form>
