--- a/Source/TreasureGuide.Web/src/css/site.scss
+++ b/Source/TreasureGuide.Web/src/css/site.scss
@@ -188,10 +188,6 @@ ux-dialog-container {
     }
 }
 
-.right {
-    float: right !important;
-}
-
 .center {
     text-align: center;
 }
@@ -212,6 +208,7 @@ input[type='button'] {
     &._unclickable {
         @extend ._disabled;
         cursor: default;
+        opacity: 1.0;
     }
 }
 
