--- a/Source/TreasureGuide.Web/src/css/autocomplete.scss
+++ b/Source/TreasureGuide.Web/src/css/autocomplete.scss
@@ -1,16 +1,16 @@
 auto-complete {
+    input {
+        margin: 0;
+    }
+
     .dropdown {
-        @extend ._alignCenter;
+        display: inline-block;
     }
 
     .dropdown-menu {
         @extend .listnav;
-        max-width: max-content;
-        border-radius: 4px;
-        margin: auto;
-    }
-
-    input {
-        margin-bottom: 0 !important;
+        border-bottom-left-radius: 4px;
+        border-bottom-right-radius: 4px;
+        margin: 0 4px !important;
     }
 }
