--- a/Source/TreasureGuide.Web/src/css/autocomplete.scss
+++ b/Source/TreasureGuide.Web/src/css/autocomplete.scss
@@ -9,8 +9,6 @@ auto-complete {
 
     .dropdown-menu {
         @extend .listnav;
-        border-bottom-left-radius: 4px;
-        border-bottom-right-radius: 4px;
-        margin: 0 4px !important;
+        border-radius: 4px;
     }
 }
