--- a/Source/TreasureGuide.Web/src/views/teams/index.html
+++ b/Source/TreasureGuide.Web/src/views/teams/index.html
@@ -2,7 +2,7 @@
     <h1>${title}</h1>
     <div auth-req="Contributor">
         <a class="button" route-href="route: teamCreate">
-            <i class="fa fa-plus"></i> Create New Team
+            <i class="fa fa-fw fa-plus"></i> Create New Team
         </a>
     </div>
     <div class="row">
