Better unit displays.

--- a/Source/TreasureGuide.Web/src/css/site.scss
+++ b/Source/TreasureGuide.Web/src/css/site.scss
@@ -85,6 +85,8 @@ $default-unit-margin: $huge-unit-margin;
     margin: $default-unit-margin;
     padding: 0;
     line-height: 0;
+    background-position: center;
+    background-size: 120%;
 
     img {
         width: 100%;
