--- a/Source/TreasureGuide.Web/src/views/teams/edit.html
+++ b/Source/TreasureGuide.Web/src/views/teams/edit.html
@@ -18,12 +18,12 @@
         </fieldset>
         <fieldset>
             <legend>Units and Sockets</legend>
-            <div class="row center">
+            <div class="row _alignCenter">
                 <team-display team.two-way="teamUnits"
                               ship.two-way="shipId"
                               editable.bind="true"></team-display>
             </div>
-            <div class="row center">
+            <div class="row _alignCenter">
                 <socket-picker sockets.two-way="teamSockets"></socket-picker>
             </div>
         </fieldset>
